--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 <div class="footer-credits">
                     <p class="paragraph-s text-light-grey">© 2022, DeckMis</p>
                     <p class="text-link text-light-grey privacy-policy">
-                        <a href="/impressum" class="text-link text-light-grey">
+                        <a href="/impressum.html" class="text-link text-light-grey">
                             Impressum
                             <br/>
                         </a>
